# mku

./: .rustfmt.toml  Cargo.toml  README.md
.github/: format.yml
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/cmd/: join.rs  mod.rs  play.rs  queue.rs  sing.rs  skip.rs
src/cmd/slash/: join.rs  mod.rs  play.rs  sing.rs
