[package]
name = "mku"
version = "0.1.0"
authors = ["PortableNavi <portable-navi@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11.5", features=["voice", "voice-model", "client", "gateway", "rustls_backend", "model", "utils", "framework", "standard_framework"], default-features=false}

tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
